feat: Add methods for z-order manipulation